<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developerluisfm.mdapplication.ContactoActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/actionbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mensaje"
                android:drawableLeft="@drawable/ic_message"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contacto"
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/enviar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
